Fixes and Testing Setup